[package]
name = "mkey_exporter"
version = "0.1.0"
authors = ["Nick Pillitteri"]
description = "Export counts and sizes of Memcached keys matching regular expressions as Prometheus metrics."
homepage = "https://github.com/56quarters/mkey_exporter"
repository = "https://github.com/56quarters/mkey_exporter"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["top", "memcached"]
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "4.1.8", features = ["cargo", "derive", "help", "error-context", "std", "usage", "wrap_help"], default_features = false }
mtop-client = "0.6.7"
prometheus-client = "0.21.2"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = {version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Profiling, disabled by default
pprof = {version =  "0.12.1", features = ["protobuf-codec"] , optional = true}

[features]
default = []
profile = ["dep:pprof"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "keys"
harness = false

[lib]
name = "mkey_exporter"
path = "src/mkey_exporter/lib.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
